objects/Sellable_Item_Product__c.object
<CustomObject>
    <fields>
        <fullName>Product_Description__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters, entered at the Base Item.   For product description information for the Product Guide wiki (or future version).   Describes product features and benefits for a Sales audience.</inlineHelpText>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Financial__c</fullName>
        <formula>TEXT(Base_Item__r.Product_Financial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Financial is set at the Base Item level and is read only in the Sellable Item level. Indicates the name of the product. This is populated from the Base Item.</inlineHelpText>
        <label>Product (Financial)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Licensing_Change_Description__c</fullName>
        <description>Describes the Product Licensing Change.</description>
        <inlineHelpText>Describes the change from above.</inlineHelpText>
        <label>Product Licensing Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Product</label>
        <referenceTo>Sellable_Product_Line__c</referenceTo>
        <relationshipLabel>Sellable Items - Product</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name_Approval_Date__c</fullName>
        <inlineHelpText>This field identifies the date a product name is approved by Naming Committee.  Entered by Pricing Manager.</inlineHelpText>
        <label>Product Name Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Shippable__c</fullName>
        <label>Product Shippable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Specific_Discount__c</fullName>
        <inlineHelpText>Discount threshold.  Entered by Pricing Manager.</inlineHelpText>
        <label>Product Specific Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <description>What it Does? Used for type of discounting bucket of each product
Downstream Impact? Impacts quoting tool. ETL syncs the value.
Which department is owner? Product/Offer Management</description>
        <label>Product Sub Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Add-On Functionality</fullName>
                </value>
                <value>
                    <fullName>Base Agent</fullName>
                </value>
                <value>
                    <fullName>Business Users</fullName>
                </value>
                <value>
                    <fullName>Data Center Provisioning</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>PROFESSIONAL SERVICES</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <description>What it Does? Used to store product version
Downstream Impact? Impacts quoting tool. ETL syncs the value. 
Which department is owner? Product/Offer Management</description>
        <label>Product Version</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIC 4.0</fullName>
                </value>
                <value>
                    <fullName>Interaction Decisions 3.8</fullName>
                </value>
                <value>
                    <fullName>Interaction Decisions 4.0</fullName>
                </value>
                <value>
                    <fullName>CIC IVR 2.4</fullName>
                </value>
                <value>
                    <fullName>CIC IVR 3.0</fullName>
                </value>
                <value>
                    <fullName>CIC IVR 4.0</fullName>
                </value>
                <value>
                    <fullName>CIC 2.3.1</fullName>
                </value>
                <value>
                    <fullName>CIC 2.4</fullName>
                </value>
                <value>
                    <fullName>CIC 3.0</fullName>
                </value>
                <value>
                    <fullName>EIC 2.3.1</fullName>
                </value>
                <value>
                    <fullName>Latitude Hosted</fullName>
                </value>
                <value>
                    <fullName>Latitude Premise</fullName>
                </value>
                <value>
                    <fullName>MIC 2.3.1</fullName>
                </value>
                <value>
                    <fullName>MIC 2.4</fullName>
                </value>
                <value>
                    <fullName>MIC 3.0</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector Premise</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector Hosted</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector Subscription</fullName>
                </value>
                <value>
                    <fullName>Benelux 4.0</fullName>
                </value>
                <value>
                    <fullName>Benelux 3.0</fullName>
                </value>
                <value>
                    <fullName>CaaS</fullName>
                </value>
                <value>
                    <fullName>NotOrderable</fullName>
                </value>
                <value>
                    <fullName>MIC 4.0</fullName>
                </value>
                <value>
                    <fullName>NV (Non-Version)</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>Latitude 12.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Sellable_Item_Project__r.Project_Manager__c</formula>
        <inlineHelpText>This is the Project Manager who owns the (release-specific) project that includes this sellable item.  This field is automatically populated when the project is selected</inlineHelpText>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <inlineHelpText>This field identifies the date when the Price Book will be updated. This is done by the Pricing Manager.</inlineHelpText>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Publish_in_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Provides whether sellable item is to be published in Quote Tool and Price List. Only changed by Pricing Manager.</inlineHelpText>
        <label>Publish in Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rationalized_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rationalized Item</label>
        <referenceTo>Base_Item_Product__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Rationalized Item)</relationshipLabel>
        <relationshipName>Rationalized_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this product is restricted, i.e. not available for quoting or visible in documentation except by contacting PM.</inlineHelpText>
        <label>Restricted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Version_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This number is part of the unique identifier in the quoting tool. Type the version using the 2-digit version number.</inlineHelpText>
        <label>SI Version Number</label>
        <referenceTo>Sellable_Item_SI_Version_Number__c</referenceTo>
        <relationshipLabel>Sellable Items - Product</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seasonal_Licensing_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicate eligibility for the seasonal bursting on the premise subscriptions</description>
        <inlineHelpText>indicate eligibility for the seasonal bursting on the premise subscriptions</inlineHelpText>
        <label>Seasonal Licensing Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sellable_Item_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This should match the project name designated by R&amp;D Project Management.

 Please see the Field Glossary link at the top of the page for more details.</inlineHelpText>
        <label>Project Name</label>
        <referenceTo>Sellable_Item_Project__c</referenceTo>
        <relationshipLabel>Sellable Items - Product</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Approval_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Provides the Shipping Approval Group responsible for approving SIs with PM Notification. This field is populated into the quote tool.</inlineHelpText>
        <label>Shipment Approval Group</label>
        <referenceTo>Product_Manager_Approval_Group__c</referenceTo>
        <relationshipLabel>Sellable Items - Product</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Approval_Text__c</fullName>
        <inlineHelpText>Describes reason for shipment approval.</inlineHelpText>
        <label>Shipment Approval Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipment_Approval__c</fullName>
        <inlineHelpText>Indicates whether this item is under Shipping Control or requires PM notification when SI is quoted.</inlineHelpText>
        <label>Shipment Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Approval Required</fullName>
                </value>
                <value>
                    <fullName>No Approval Required - Email Notification when Quoted</fullName>
                </value>
                <value>
                    <fullName>Available for Expansion Only - AE Acknowledgment</fullName>
                </value>
                <value>
                    <fullName>Prerequisites Limited Compatibility or Headed Towards EOL - AE Acknowledgment</fullName>
                </value>
                <value>
                    <fullName>Limited Functionality or Other Restrictions - AE Acknowledgment &amp; Exec Visibility</fullName>
                </value>
                <value>
                    <fullName>Highly Technical Sale - PM Approval Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shippable_Item_Pre_requisites__c</fullName>
        <inlineHelpText>Names and quantities of other sellable items customers should purchase before this one.</inlineHelpText>
        <label>Prerequisites</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping and Handling Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <formula>TEXT(Base_Item__r.Solution_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is set at the Base Item level and is read only in the Sellable Item level. This is the hierarchical group that products flow into for reporting purposes. Each Solution Category is a distinct group to distinguish the product’s top-level purpose.</inlineHelpText>
        <label>Solution Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status is not filled in by the Product Manager when creating a new Sellable Item; it is populated by Software Delivery based on the stage of the work flow for each sellable item.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>To Be Updated</fullName>
                    <default>true</default>
                    <label>To Be Updated</label>
                </value>
                <value>
                    <fullName>Sellable Item Ready</fullName>
                </value>
                <value>
                    <fullName>Pricing Frozen</fullName>
                </value>
                <value>
                    <fullName>Submitted to ERP</fullName>
                </value>
                <value>
                    <fullName>ERP Profile Complete</fullName>
                </value>
                <value>
                    <fullName>SI Attributes Frozen</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Submitted to Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>What it Does? Sub category of product. Used in Product Configurator.
Downstream Impact? Impacts quoting tool. ETL syncs the value.
Which department is owner? Product/Offer Management</description>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on Monthly Contact Center Agent Fees</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 1000 Modular Options</fullName>
                </value>
                <value>
                    <fullName>AudioCodes Accessories for Gateways</fullName>
                </value>
                <value>
                    <fullName>AudioCodes Media Pack Analog Gateways</fullName>
                </value>
                <value>
                    <fullName>AudioCodes Mediant Digital Gateways</fullName>
                </value>
                <value>
                    <fullName>Education Courses and Packaged Curriculum</fullName>
                </value>
                <value>
                    <fullName>Genesys Hardware</fullName>
                </value>
                <value>
                    <fullName>Interaction Application Servers</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>Media Server Offerings</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Monthly Fees</fullName>
                </value>
                <value>
                    <fullName>Monthly Contact Center Agent Fees</fullName>
                </value>
                <value>
                    <fullName>Monthly Telecommunications and Datacenter Fees</fullName>
                </value>
                <value>
                    <fullName>Passthrough</fullName>
                </value>
                <value>
                    <fullName>Polycom Telephone Accessories</fullName>
                </value>
                <value>
                    <fullName>Polycom Telephones</fullName>
                </value>
                <value>
                    <fullName>Power Cords</fullName>
                </value>
                <value>
                    <fullName>Server Hardware Warranty</fullName>
                </value>
                <value>
                    <fullName>Set-up Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Successor_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically populated once the next version of this sellable item is created. Automatic for simple version increment (PM only enters changes if this is a complex product transition)</inlineHelpText>
        <label>Successor Of</label>
        <referenceTo>Sellable_Item_Product__c</referenceTo>
        <relationshipLabel>Successfors</relationshipLabel>
        <relationshipName>Successors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SureTaxCodeForeign__c</fullName>
        <label>SureTax Code Foreign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SureTaxCodeUndetermined__c</fullName>
        <label>SureTax Code Undetermined</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sure_Tax_Grouping__c</fullName>
        <label>SureTax Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_To_MyCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does? Flag which triggers sync to Mycloud platform. Downstream Impact? Yes, Pureconnet Cloud, Pureconnect Subscription billing. Which Department is Owner? MyCloud Platform Team</description>
        <inlineHelpText>This field should be enabled (checked) if MyCloud should track and/or bill subscriptions for this part</inlineHelpText>
        <label>Sync To MyCloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Category__c</fullName>
        <formula>TEXT( Base_Item__r.Taxonomy_Category__c )</formula>
        <inlineHelpText>This is the hierarchical group that categorize Genesys premise products for Omnichannel Engagement Center purposes, including reporting. Each Taxonomy Category is an entry point into the Genesys Customer Experience Platform.</inlineHelpText>
        <label>Taxonomy Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Solution_Category__c</fullName>
        <formula>text(Base_Item__r.Taxonomy_Solution_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxonomy Solution Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Solution__c</fullName>
        <formula>text(Base_Item__r.Taxonomy_Solution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxonomy Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Sub_Category__c</fullName>
        <formula>TEXT( Base_Item__r.Taxonomy_Sub_Category__c )</formula>
        <inlineHelpText>This is equal to the Product Name except in the special cases where the Taxonomy Category equals Customer Engagement and Multimedia Communications.</inlineHelpText>
        <label>Taxonomy Sub-Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Licenses_Required__c</fullName>
        <inlineHelpText>List of FlexNet Publisher technical license names required for this product.  Check all that apply, multiple selections allowed.  If product does not use technical licensing, leave blank.</inlineHelpText>
        <label>Technical Licenses Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Third-party</fullName>
                </value>
                <value>
                    <fullName>CLDistributed</fullName>
                </value>
                <value>
                    <fullName>ContextServices</fullName>
                </value>
                <value>
                    <fullName>csta_connector_bw_sdn</fullName>
                </value>
                <value>
                    <fullName>cti_ha_option</fullName>
                </value>
                <value>
                    <fullName>desktop_agent</fullName>
                </value>
                <value>
                    <fullName>DESKTOP_SUPERVISOR</fullName>
                </value>
                <value>
                    <fullName>GIS</fullName>
                </value>
                <value>
                    <fullName>GIS_CONFIGSERVICE</fullName>
                </value>
                <value>
                    <fullName>GIS_INTERACTIONSERVICE</fullName>
                </value>
                <value>
                    <fullName>GIS_STATSERVICE</fullName>
                </value>
                <value>
                    <fullName>ha_redundancy</fullName>
                </value>
                <value>
                    <fullName>ics_custom_media_channel</fullName>
                </value>
                <value>
                    <fullName>ics_email_webform_channel</fullName>
                </value>
                <value>
                    <fullName>ics_live_web_channel</fullName>
                </value>
                <value>
                    <fullName>ics_multi_media_agent_seat</fullName>
                </value>
                <value>
                    <fullName>ics_nlp_content_analysis</fullName>
                </value>
                <value>
                    <fullName>ics_sms_channel</fullName>
                </value>
                <value>
                    <fullName>Ids</fullName>
                </value>
                <value>
                    <fullName>ISDK_FACTORY</fullName>
                </value>
                <value>
                    <fullName>ISDK_QUEUE</fullName>
                </value>
                <value>
                    <fullName>iserver_ha_option</fullName>
                </value>
                <value>
                    <fullName>iwd_jms_cp</fullName>
                </value>
                <value>
                    <fullName>MLDistributed</fullName>
                </value>
                <value>
                    <fullName>MLSNMP</fullName>
                </value>
                <value>
                    <fullName>occ_full</fullName>
                </value>
                <value>
                    <fullName>occ_port</fullName>
                </value>
                <value>
                    <fullName>occ_preview</fullName>
                </value>
                <value>
                    <fullName>router_ha_option</fullName>
                </value>
                <value>
                    <fullName>router_seats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Licensing_Change_Description__c</fullName>
        <description>Describes the Technical Licensing Change.</description>
        <inlineHelpText>Describe the change from above.</inlineHelpText>
        <label>Technical Licensing Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Licensing_Change__c</fullName>
        <inlineHelpText>Indicates whether there has been a change from previous versions.  For brand new items select &quot;Introduction/Change of Technical License&quot; under Technical Licensing Change.</inlineHelpText>
        <label>Technical Licensing Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Introduction / Change of Technical License</fullName>
                </value>
                <value>
                    <fullName>Removal of Technical License</fullName>
                </value>
                <value>
                    <fullName>Not Applicable (Not a License)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_GC__c</fullName>
        <label>3rd Party GC %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Third_party_name__c</fullName>
        <label>Third party name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>ARIA</fullName>
                </value>
                <value>
                    <fullName>AudioCodes</fullName>
                </value>
                <value>
                    <fullName>Black Chair</fullName>
                </value>
                <value>
                    <fullName>CallScripter (ININ)</fullName>
                </value>
                <value>
                    <fullName>CounterPath</fullName>
                </value>
                <value>
                    <fullName>Dialogic - ININ</fullName>
                </value>
                <value>
                    <fullName>Dialogic-Genesys</fullName>
                </value>
                <value>
                    <fullName>Riverstar</fullName>
                </value>
                <value>
                    <fullName>SAP (ININ)</fullName>
                </value>
                <value>
                    <fullName>VHT</fullName>
                </value>
                <value>
                    <fullName>VHT ININ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>What it Does? Used to store product tier
Downstream Impact? Impacts quoting tool. ETL syncs the value. 
Which department is owner? Product/Offer Management</description>
        <label>Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>RCM Internet Option</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Ensure that Type says “Product”. PM must set the type of sellable item to Product. The other options are used by Professtional Services, and Genesys University.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Mission-Critical CC Item</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Product - System License</fullName>
                </value>
                <value>
                    <fullName>Product - Hardware</fullName>
                </value>
                <value>
                    <fullName>PS Service Offering</fullName>
                </value>
                <value>
                    <fullName>AppFoundry</fullName>
                </value>
                <value>
                    <fullName>Expense Relief</fullName>
                </value>
                <value>
                    <fullName>Flex Care</fullName>
                </value>
                <value>
                    <fullName>Pay per use</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Saas</fullName>
                </value>
                <value>
                    <fullName>Migration Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unbilled_AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unbilled AR Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Unbilled AR Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product5</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>